@@ -127,12 +127,15 @@ sub boxes {
   my ( $x1, $y1, $x2, $y2, $text );
   while ( my $token = $p->get_token ) {
    if ( $token->[0] eq 'S' ) {
-    if ( $token->[1] eq 'span'
+    if (
+         $token->[1] eq 'span'
      and defined( $token->[2]{class} )
-     and
-     ( $token->[2]{class} eq 'ocr_line' or $token->[2]{class} eq 'ocr_word' )
+     and ( $token->[2]{class} eq 'ocr_line'
+      or $token->[2]{class} eq 'ocr_word'
+      or $token->[2]{class} eq 'ocrx_word' )
      and defined( $token->[2]{title} )
-     and $token->[2]{title} =~ /bbox\ (\d+)\ (\d+)\ (\d+)\ (\d+)/x )
+     and $token->[2]{title} =~ /bbox\ (\d+)\ (\d+)\ (\d+)\ (\d+)/x
+      )
     {
      ( $x1, $y1, $x2, $y2 ) = ( $1, $2, $3, $4 );
     }
