@@ -5,6 +5,8 @@
   (The save dialogue is way to big for my screen and cannot resize)
 * Don't need to convert image to .tiff for tesseract v3
   Thanks to Leon Fisk for the patch
+* Fix parsing of hocr output from tesseract v3.02.01
+  Thanks to Leon Fisk for the patch
 
 
 1.1.1 (01.02.2013):
